part2/2.02/manifests/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-go-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-go-backend
  template:
    metadata:
      labels:
        app: todo-go-backend
    spec:
      containers:
        - name: todo-go-backend
          image: djblackett/todo-go-backend
---

apiVersion: v1
kind: Service
metadata:
  name: todo-go-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-go-backend # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
