part2/2.02/manifests/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-go-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-go-frontend
  template:
    metadata:
      labels:
        app: todo-go-frontend
    spec:
      containers:
        - name: todo-go-frontend
          image: djblackett/todo-go-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: todo-go-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-go-frontend # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
