part2/2.02/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-go-ingress
spec:
  rules:
    - http:
        paths:
          - path: /todo-react
            pathType: Prefix
            backend:
              service:
                name: todo-go-frontend-svc
                port:
                  number: 2345
